Refactor security model: add DTOs for authentication and authorization, implement JWT handling, and configure role-permission relationships